adds the html 5 skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,13 @@
-<input name='name'></input>
+<!DOCTYPE html>
+<html>
+
+<head>
+</head>
+
+<body>
+    <div>
+        <input id='left' />
+    </div>
+</body>
+
+</html>
