moves the client script out of the header. adds a simple event handler

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html>
 
 <head>
-    <script src='client.js'></script>
 </head>
 
 <body>
     <div>
-        <input id='left' />
+        <input id='item-new' />
+        <button id='item-new-add'>add</button>
     </div>
+    <div>
+        <input id='item-left' />
+        <button id='item-left-find'>find</button>
+    </div>
+    <script type='text/javascript' src='client.js'></script>
 </body>
 
 </html>
